# project_manager

./: .dockerignore  .gitignore  Dockerfile  QA_TEST_65.md  README.md  demo.md  docker-entrypoint.sh  install.sh  org-demo.md  pm  pyproject.toml  requirements.txt  test-checklist.tmp  test-draft-pr.md  test_draft_pr.txt  test_spec_integration.md  tutorial.md
checks/: check-docs-exist.sh  run-checks.sh
papers/: .gitignore  Makefile  open-lab-infrastructure.md  open-lab.tex  review-prompt.md
plans/: open-lab-old.md  open-lab.hst  open-lab.md  open-lab.tex  open-lab.ver  org-demo.md  recursive-tech-trees.md
pm/: .gitignore  bugs.md  improvements.md  notes.txt  project.yaml
pm_core/: __main__.py  backend.py  behavior_report.py  bridge.py  bridge_client.py  bug_fix_prompts.py  claude_launcher.py  cli.py  container.py  dashboard_server.py  diag_popup.py  editor.py  fake_claude.py  fake_github.py  gh_ops.py  git_ops.py  governor_lock.py  graph.py  guide.py  hook_events.py  hook_install.py  hook_receiver.py  launch_queue.py  loop_daemon.py  loop_shared.py  markdown_render.py  memory_governor.py  model_config.py  monitor_loop.py  notes.py  pane_idle.py  pane_layout.py  pane_registry.py  paths.py  plan_parser.py  pm_sync.py  pr_cleanup.py  pr_sync.py  pr_utils.py  prompt_gen.py  (+26 more)
tests/: conftest.py  qa_s50_push_test.txt  test_auto_start_qa.py  test_behavior_report.py  test_bench_bigcodebench.py  test_bench_executor.py  test_bench_exercises.py  test_bench_exercises_evalplus.py  test_bench_livecodebench.py  test_bench_orchestrator.py  test_bench_runner.py  test_bench_solve.py  (+123 more)
(+727 files in other folders)
