[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pm"
version = "0.1.0"
description = "Project manager for Claude Code sessions"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "textual>=0.40",
    "pyperclip>=1.8",
]

[tool.setuptools]
packages = ["pm_core", "pm_core.tui"]

[project.scripts]
pm = "pm_core.cli:main"
