[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pm"
version = "0.1.0"
description = "Project manager for Claude Code sessions"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "textual>=0.40",
    "pyperclip>=1.8",
    "fastapi>=0.110",
    "jinja2>=3.1",
    "watchdog>=4.0",
    "sse-starlette>=2.0",
    "uvicorn>=0.27",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "httpx>=0.27"]

[tool.setuptools]
packages = ["pm_core", "pm_core.tui", "pm_core.cluster", "pm_core.cli", "pm_core.bench", "pm_core.watchers", "pm_core.review", "pm_core.review.ui", "pm_core.plans"]

[tool.setuptools.package-data]
pm_core = ["docs/*.md"]
"pm_core.review.ui" = ["templates/*.html", "static/*.css", "static/*.js"]

[project.scripts]
pm = "pm_core.wrapper:main"

[tool.pytest.ini_options]
pythonpath = ["."]
